src/test/deca/syntax/valid/SansObjet/IfThenElse-IfElseIf-Only.deca
// Description:
//    If with else branch and no instructions.
//
// Results:
//    (void)
//
// Historique:
//    cree le 07/01/2022

{
        if (x > 3) {}
        else if (x < 3) {
        }
}
